Projeto_compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON block DOT
Rule 2     block -> optional_declarations compound_statement
Rule 3     optional_declarations -> declarations
Rule 4     optional_declarations -> empty
Rule 5     declarations -> declaration_section
Rule 6     declarations -> declarations declaration_section
Rule 7     declaration_section -> VAR var_declaration_list SEMICOLON
Rule 8     declaration_section -> CONST const_declaration_list SEMICOLON
Rule 9     declaration_section -> TYPE type_declaration_list SEMICOLON
Rule 10    declaration_section -> FUNCTION function_declaration SEMICOLON
Rule 11    declaration_section -> PROCEDURE procedure_declaration SEMICOLON
Rule 12    var_declaration_list -> var_declaration
Rule 13    var_declaration_list -> var_declaration_list SEMICOLON var_declaration
Rule 14    const_declaration_list -> const_declaration
Rule 15    const_declaration_list -> const_declaration_list SEMICOLON const_declaration
Rule 16    type_declaration_list -> type_declaration
Rule 17    type_declaration_list -> type_declaration_list SEMICOLON type_declaration
Rule 18    function_declaration -> ID parameters COLON type SEMICOLON block
Rule 19    function_declaration -> ID parameters COLON type SEMICOLON FORWARD SEMICOLON
Rule 20    procedure_declaration -> ID parameters SEMICOLON block
Rule 21    procedure_declaration -> ID parameters SEMICOLON FORWARD SEMICOLON
Rule 22    parameters -> LPAREN parameter_list RPAREN
Rule 23    parameters -> empty
Rule 24    parameter_list -> parameter
Rule 25    parameter_list -> parameter_list SEMICOLON parameter
Rule 26    parameter -> ID_list COLON type
Rule 27    parameter -> VAR ID_list COLON type
Rule 28    var_declaration -> ID_list COLON type
Rule 29    const_declaration -> ID EQUAL expression
Rule 30    type_declaration -> ID EQUAL type
Rule 31    ID_list -> ID
Rule 32    ID_list -> ID_list COMMA ID
Rule 33    type -> INTEGER
Rule 34    type -> REAL
Rule 35    type -> BOOLEAN
Rule 36    type -> CHAR
Rule 37    type -> STRING
Rule 38    type -> SET OF type
Rule 39    type -> FILE OF type
Rule 40    type -> ARRAY LBRACKET INTEGER_CONST RANGE INTEGER_CONST RBRACKET OF type
Rule 41    type -> RECORD field_list END
Rule 42    type -> ID
Rule 43    field_list -> var_declaration SEMICOLON
Rule 44    field_list -> field_list var_declaration SEMICOLON
Rule 45    compound_statement -> BEGIN statement_list END
Rule 46    statement_list -> statement
Rule 47    statement_list -> statement_list SEMICOLON statement
Rule 48    statement -> non_if_statement
Rule 49    statement -> if_statement
Rule 50    non_if_statement -> assignment_statement
Rule 51    non_if_statement -> while_statement
Rule 52    non_if_statement -> for_statement
Rule 53    non_if_statement -> compound_statement
Rule 54    non_if_statement -> writeln_statement
Rule 55    non_if_statement -> readln_statement
Rule 56    non_if_statement -> function_call_statement
Rule 57    non_if_statement -> BREAK
Rule 58    non_if_statement -> CONTINUE
Rule 59    non_if_statement -> EXIT
Rule 60    non_if_statement -> RETURN expression
Rule 61    non_if_statement -> empty
Rule 62    if_statement -> IF expression THEN statement
Rule 63    if_statement -> IF expression THEN statement ELSE statement
Rule 64    assignment_statement -> variable ASSIGN expression
Rule 65    while_statement -> WHILE expression DO statement
Rule 66    for_statement -> FOR ID ASSIGN expression TO expression DO statement
Rule 67    for_statement -> FOR ID ASSIGN expression DOWNTO expression DO statement
Rule 68    writeln_statement -> WRITELN LPAREN expression_list RPAREN
Rule 69    writeln_statement -> WRITELN LPAREN RPAREN
Rule 70    readln_statement -> READLN LPAREN variable_list RPAREN
Rule 71    readln_statement -> READLN LPAREN RPAREN
Rule 72    function_call_statement -> ID LPAREN argument_list RPAREN
Rule 73    function_call_statement -> ID LPAREN RPAREN
Rule 74    expression_list -> expression
Rule 75    expression_list -> expression_list COMMA expression
Rule 76    variable_list -> variable
Rule 77    variable_list -> variable_list COMMA variable
Rule 78    variable -> ID
Rule 79    variable -> ID LBRACKET expression RBRACKET
Rule 80    variable -> AT ID
Rule 81    variable -> ID LPAREN argument_list RPAREN
Rule 82    variable -> ID LPAREN RPAREN
Rule 83    argument_list -> expression
Rule 84    argument_list -> argument_list COMMA expression
Rule 85    expression -> simple_expression
Rule 86    expression -> simple_expression relational_operator simple_expression
Rule 87    simple_expression -> term
Rule 88    simple_expression -> ADD term
Rule 89    simple_expression -> SUB term
Rule 90    simple_expression -> simple_expression adding_operator term
Rule 91    term -> factor
Rule 92    term -> term multiplying_operator factor
Rule 93    term -> term POW factor
Rule 94    factor -> variable
Rule 95    factor -> INTEGER_CONST
Rule 96    factor -> REAL_CONST
Rule 97    factor -> STRING_CONST
Rule 98    factor -> LPAREN expression RPAREN
Rule 99    factor -> CHAR_CONST
Rule 100   factor -> HEX_CONST
Rule 101   factor -> TRUE
Rule 102   factor -> FALSE
Rule 103   factor -> NOT factor
Rule 104   relational_operator -> EQUAL
Rule 105   relational_operator -> NOTEQUAL
Rule 106   relational_operator -> LESS
Rule 107   relational_operator -> GREATER
Rule 108   relational_operator -> LESSEQUAL
Rule 109   relational_operator -> GREATEREQUAL
Rule 110   adding_operator -> ADD
Rule 111   adding_operator -> SUB
Rule 112   adding_operator -> OR
Rule 113   multiplying_operator -> MUL
Rule 114   multiplying_operator -> DIVIDE
Rule 115   multiplying_operator -> DIV
Rule 116   multiplying_operator -> MOD
Rule 117   multiplying_operator -> AND
Rule 118   empty -> <empty>

Terminals, with rules where they appear

ADD                  : 88 110
AND                  : 117
ARRAY                : 40
ASSIGN               : 64 66 67
AT                   : 80
BEGIN                : 45
BOOLEAN              : 35
BREAK                : 57
CHAR                 : 36
CHAR_CONST           : 99
COLON                : 18 19 26 27 28
COMMA                : 32 75 77 84
CONST                : 8
CONTINUE             : 58
DIV                  : 115
DIVIDE               : 114
DO                   : 65 66 67
DOT                  : 1
DOWNTO               : 67
ELSE                 : 63
END                  : 41 45
EQUAL                : 29 30 104
EXIT                 : 59
FALSE                : 102
FILE                 : 39
FOR                  : 66 67
FORWARD              : 19 21
FUNCTION             : 10
GREATER              : 107
GREATEREQUAL         : 109
HEX_CONST            : 100
ID                   : 1 18 19 20 21 29 30 31 32 42 66 67 72 73 78 79 80 81 82
IF                   : 62 63
INTEGER              : 33
INTEGER_CONST        : 40 40 95
LBRACKET             : 40 79
LESS                 : 106
LESSEQUAL            : 108
LPAREN               : 22 68 69 70 71 72 73 81 82 98
MOD                  : 116
MUL                  : 113
NOT                  : 103
NOTEQUAL             : 105
OF                   : 38 39 40
OR                   : 112
POW                  : 93
PROCEDURE            : 11
PROGRAM              : 1
RANGE                : 40
RBRACKET             : 40 79
READLN               : 70 71
REAL                 : 34
REAL_CONST           : 96
RECORD               : 41
RETURN               : 60
RPAREN               : 22 68 69 70 71 72 73 81 82 98
SEMICOLON            : 1 7 8 9 10 11 13 15 17 18 19 19 20 21 21 25 43 44 47
SET                  : 38
STRING               : 37
STRING_CONST         : 97
SUB                  : 89 111
THEN                 : 62 63
TO                   : 66
TRUE                 : 101
TYPE                 : 9
VAR                  : 7 27
WHILE                : 65
WRITELN              : 68 69
error                : 

Nonterminals, with rules where they appear

ID_list              : 26 27 28 32
adding_operator      : 90
argument_list        : 72 81 84
assignment_statement : 50
block                : 1 18 20
compound_statement   : 2 53
const_declaration    : 14 15
const_declaration_list : 8 15
declaration_section  : 5 6
declarations         : 3 6
empty                : 4 23 61
expression           : 29 60 62 63 64 65 66 66 67 67 74 75 79 83 84 98
expression_list      : 68 75
factor               : 91 92 93 103
field_list           : 41 44
for_statement        : 52
function_call_statement : 56
function_declaration : 10
if_statement         : 49
multiplying_operator : 92
non_if_statement     : 48
optional_declarations : 2
parameter            : 24 25
parameter_list       : 22 25
parameters           : 18 19 20 21
procedure_declaration : 11
program              : 0
readln_statement     : 55
relational_operator  : 86
simple_expression    : 85 86 86 90
statement            : 46 47 62 63 63 65 66 67
statement_list       : 45 47
term                 : 87 88 89 90 92 93
type                 : 18 19 26 27 28 30 38 39 40
type_declaration     : 16 17
type_declaration_list : 9 17
var_declaration      : 12 13 43 44
var_declaration_list : 7 13
variable             : 64 76 77 94
variable_list        : 70 77
while_statement      : 51
writeln_statement    : 54

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON block DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON block DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON block DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . block DOT
    (2) block -> . optional_declarations compound_statement
    (3) optional_declarations -> . declarations
    (4) optional_declarations -> . empty
    (5) declarations -> . declaration_section
    (6) declarations -> . declarations declaration_section
    (118) empty -> .
    (7) declaration_section -> . VAR var_declaration_list SEMICOLON
    (8) declaration_section -> . CONST const_declaration_list SEMICOLON
    (9) declaration_section -> . TYPE type_declaration_list SEMICOLON
    (10) declaration_section -> . FUNCTION function_declaration SEMICOLON
    (11) declaration_section -> . PROCEDURE procedure_declaration SEMICOLON

    BEGIN           reduce using rule 118 (empty -> .)
    VAR             shift and go to state 10
    CONST           shift and go to state 11
    TYPE            shift and go to state 12
    FUNCTION        shift and go to state 13
    PROCEDURE       shift and go to state 14

    block                          shift and go to state 5
    optional_declarations          shift and go to state 6
    declarations                   shift and go to state 7
    empty                          shift and go to state 8
    declaration_section            shift and go to state 9

state 5

    (1) program -> PROGRAM ID SEMICOLON block . DOT

    DOT             shift and go to state 15


state 6

    (2) block -> optional_declarations . compound_statement
    (45) compound_statement -> . BEGIN statement_list END

    BEGIN           shift and go to state 17

    compound_statement             shift and go to state 16

state 7

    (3) optional_declarations -> declarations .
    (6) declarations -> declarations . declaration_section
    (7) declaration_section -> . VAR var_declaration_list SEMICOLON
    (8) declaration_section -> . CONST const_declaration_list SEMICOLON
    (9) declaration_section -> . TYPE type_declaration_list SEMICOLON
    (10) declaration_section -> . FUNCTION function_declaration SEMICOLON
    (11) declaration_section -> . PROCEDURE procedure_declaration SEMICOLON

    BEGIN           reduce using rule 3 (optional_declarations -> declarations .)
    VAR             shift and go to state 10
    CONST           shift and go to state 11
    TYPE            shift and go to state 12
    FUNCTION        shift and go to state 13
    PROCEDURE       shift and go to state 14

    declaration_section            shift and go to state 18

state 8

    (4) optional_declarations -> empty .

    BEGIN           reduce using rule 4 (optional_declarations -> empty .)


state 9

    (5) declarations -> declaration_section .

    VAR             reduce using rule 5 (declarations -> declaration_section .)
    CONST           reduce using rule 5 (declarations -> declaration_section .)
    TYPE            reduce using rule 5 (declarations -> declaration_section .)
    FUNCTION        reduce using rule 5 (declarations -> declaration_section .)
    PROCEDURE       reduce using rule 5 (declarations -> declaration_section .)
    BEGIN           reduce using rule 5 (declarations -> declaration_section .)


state 10

    (7) declaration_section -> VAR . var_declaration_list SEMICOLON
    (12) var_declaration_list -> . var_declaration
    (13) var_declaration_list -> . var_declaration_list SEMICOLON var_declaration
    (28) var_declaration -> . ID_list COLON type
    (31) ID_list -> . ID
    (32) ID_list -> . ID_list COMMA ID

    ID              shift and go to state 22

    var_declaration_list           shift and go to state 19
    var_declaration                shift and go to state 20
    ID_list                        shift and go to state 21

state 11

    (8) declaration_section -> CONST . const_declaration_list SEMICOLON
    (14) const_declaration_list -> . const_declaration
    (15) const_declaration_list -> . const_declaration_list SEMICOLON const_declaration
    (29) const_declaration -> . ID EQUAL expression

    ID              shift and go to state 25

    const_declaration_list         shift and go to state 23
    const_declaration              shift and go to state 24

state 12

    (9) declaration_section -> TYPE . type_declaration_list SEMICOLON
    (16) type_declaration_list -> . type_declaration
    (17) type_declaration_list -> . type_declaration_list SEMICOLON type_declaration
    (30) type_declaration -> . ID EQUAL type

    ID              shift and go to state 28

    type_declaration_list          shift and go to state 26
    type_declaration               shift and go to state 27

state 13

    (10) declaration_section -> FUNCTION . function_declaration SEMICOLON
    (18) function_declaration -> . ID parameters COLON type SEMICOLON block
    (19) function_declaration -> . ID parameters COLON type SEMICOLON FORWARD SEMICOLON

    ID              shift and go to state 30

    function_declaration           shift and go to state 29

state 14

    (11) declaration_section -> PROCEDURE . procedure_declaration SEMICOLON
    (20) procedure_declaration -> . ID parameters SEMICOLON block
    (21) procedure_declaration -> . ID parameters SEMICOLON FORWARD SEMICOLON

    ID              shift and go to state 32

    procedure_declaration          shift and go to state 31

state 15

    (1) program -> PROGRAM ID SEMICOLON block DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON block DOT .)


state 16

    (2) block -> optional_declarations compound_statement .

    DOT             reduce using rule 2 (block -> optional_declarations compound_statement .)
    SEMICOLON       reduce using rule 2 (block -> optional_declarations compound_statement .)


state 17

    (45) compound_statement -> BEGIN . statement_list END
    (46) statement_list -> . statement
    (47) statement_list -> . statement_list SEMICOLON statement
    (48) statement -> . non_if_statement
    (49) statement -> . if_statement
    (50) non_if_statement -> . assignment_statement
    (51) non_if_statement -> . while_statement
    (52) non_if_statement -> . for_statement
    (53) non_if_statement -> . compound_statement
    (54) non_if_statement -> . writeln_statement
    (55) non_if_statement -> . readln_statement
    (56) non_if_statement -> . function_call_statement
    (57) non_if_statement -> . BREAK
    (58) non_if_statement -> . CONTINUE
    (59) non_if_statement -> . EXIT
    (60) non_if_statement -> . RETURN expression
    (61) non_if_statement -> . empty
    (62) if_statement -> . IF expression THEN statement
    (63) if_statement -> . IF expression THEN statement ELSE statement
    (64) assignment_statement -> . variable ASSIGN expression
    (65) while_statement -> . WHILE expression DO statement
    (66) for_statement -> . FOR ID ASSIGN expression TO expression DO statement
    (67) for_statement -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (45) compound_statement -> . BEGIN statement_list END
    (68) writeln_statement -> . WRITELN LPAREN expression_list RPAREN
    (69) writeln_statement -> . WRITELN LPAREN RPAREN
    (70) readln_statement -> . READLN LPAREN variable_list RPAREN
    (71) readln_statement -> . READLN LPAREN RPAREN
    (72) function_call_statement -> . ID LPAREN argument_list RPAREN
    (73) function_call_statement -> . ID LPAREN RPAREN
    (118) empty -> .
    (78) variable -> . ID
    (79) variable -> . ID LBRACKET expression RBRACKET
    (80) variable -> . AT ID
    (81) variable -> . ID LPAREN argument_list RPAREN
    (82) variable -> . ID LPAREN RPAREN

    BREAK           shift and go to state 44
    CONTINUE        shift and go to state 45
    EXIT            shift and go to state 46
    RETURN          shift and go to state 47
    IF              shift and go to state 49
    WHILE           shift and go to state 51
    FOR             shift and go to state 52
    BEGIN           shift and go to state 17
    WRITELN         shift and go to state 54
    READLN          shift and go to state 55
    ID              shift and go to state 53
    END             reduce using rule 118 (empty -> .)
    SEMICOLON       reduce using rule 118 (empty -> .)
    AT              shift and go to state 56

    statement_list                 shift and go to state 33
    statement                      shift and go to state 34
    non_if_statement               shift and go to state 35
    if_statement                   shift and go to state 36
    assignment_statement           shift and go to state 37
    while_statement                shift and go to state 38
    for_statement                  shift and go to state 39
    compound_statement             shift and go to state 40
    writeln_statement              shift and go to state 41
    readln_statement               shift and go to state 42
    function_call_statement        shift and go to state 43
    empty                          shift and go to state 48
    variable                       shift and go to state 50

state 18

    (6) declarations -> declarations declaration_section .

    VAR             reduce using rule 6 (declarations -> declarations declaration_section .)
    CONST           reduce using rule 6 (declarations -> declarations declaration_section .)
    TYPE            reduce using rule 6 (declarations -> declarations declaration_section .)
    FUNCTION        reduce using rule 6 (declarations -> declarations declaration_section .)
    PROCEDURE       reduce using rule 6 (declarations -> declarations declaration_section .)
    BEGIN           reduce using rule 6 (declarations -> declarations declaration_section .)


state 19

    (7) declaration_section -> VAR var_declaration_list . SEMICOLON
    (13) var_declaration_list -> var_declaration_list . SEMICOLON var_declaration

    SEMICOLON       shift and go to state 57


state 20

    (12) var_declaration_list -> var_declaration .

    SEMICOLON       reduce using rule 12 (var_declaration_list -> var_declaration .)


state 21

    (28) var_declaration -> ID_list . COLON type
    (32) ID_list -> ID_list . COMMA ID

    COLON           shift and go to state 58
    COMMA           shift and go to state 59


state 22

    (31) ID_list -> ID .

    COLON           reduce using rule 31 (ID_list -> ID .)
    COMMA           reduce using rule 31 (ID_list -> ID .)


state 23

    (8) declaration_section -> CONST const_declaration_list . SEMICOLON
    (15) const_declaration_list -> const_declaration_list . SEMICOLON const_declaration

    SEMICOLON       shift and go to state 60


state 24

    (14) const_declaration_list -> const_declaration .

    SEMICOLON       reduce using rule 14 (const_declaration_list -> const_declaration .)


state 25

    (29) const_declaration -> ID . EQUAL expression

    EQUAL           shift and go to state 61


state 26

    (9) declaration_section -> TYPE type_declaration_list . SEMICOLON
    (17) type_declaration_list -> type_declaration_list . SEMICOLON type_declaration

    SEMICOLON       shift and go to state 62


state 27

    (16) type_declaration_list -> type_declaration .

    SEMICOLON       reduce using rule 16 (type_declaration_list -> type_declaration .)


state 28

    (30) type_declaration -> ID . EQUAL type

    EQUAL           shift and go to state 63


state 29

    (10) declaration_section -> FUNCTION function_declaration . SEMICOLON

    SEMICOLON       shift and go to state 64


state 30

    (18) function_declaration -> ID . parameters COLON type SEMICOLON block
    (19) function_declaration -> ID . parameters COLON type SEMICOLON FORWARD SEMICOLON
    (22) parameters -> . LPAREN parameter_list RPAREN
    (23) parameters -> . empty
    (118) empty -> .

    LPAREN          shift and go to state 66
    COLON           reduce using rule 118 (empty -> .)

    parameters                     shift and go to state 65
    empty                          shift and go to state 67

state 31

    (11) declaration_section -> PROCEDURE procedure_declaration . SEMICOLON

    SEMICOLON       shift and go to state 68


state 32

    (20) procedure_declaration -> ID . parameters SEMICOLON block
    (21) procedure_declaration -> ID . parameters SEMICOLON FORWARD SEMICOLON
    (22) parameters -> . LPAREN parameter_list RPAREN
    (23) parameters -> . empty
    (118) empty -> .

    LPAREN          shift and go to state 66
    SEMICOLON       reduce using rule 118 (empty -> .)

    parameters                     shift and go to state 69
    empty                          shift and go to state 67

state 33

    (45) compound_statement -> BEGIN statement_list . END
    (47) statement_list -> statement_list . SEMICOLON statement

    END             shift and go to state 70
    SEMICOLON       shift and go to state 71


state 34

    (46) statement_list -> statement .

    END             reduce using rule 46 (statement_list -> statement .)
    SEMICOLON       reduce using rule 46 (statement_list -> statement .)


state 35

    (48) statement -> non_if_statement .

    END             reduce using rule 48 (statement -> non_if_statement .)
    SEMICOLON       reduce using rule 48 (statement -> non_if_statement .)
    ELSE            reduce using rule 48 (statement -> non_if_statement .)


state 36

    (49) statement -> if_statement .

    END             reduce using rule 49 (statement -> if_statement .)
    SEMICOLON       reduce using rule 49 (statement -> if_statement .)
    ELSE            reduce using rule 49 (statement -> if_statement .)


state 37

    (50) non_if_statement -> assignment_statement .

    END             reduce using rule 50 (non_if_statement -> assignment_statement .)
    SEMICOLON       reduce using rule 50 (non_if_statement -> assignment_statement .)
    ELSE            reduce using rule 50 (non_if_statement -> assignment_statement .)


state 38

    (51) non_if_statement -> while_statement .

    END             reduce using rule 51 (non_if_statement -> while_statement .)
    SEMICOLON       reduce using rule 51 (non_if_statement -> while_statement .)
    ELSE            reduce using rule 51 (non_if_statement -> while_statement .)


state 39

    (52) non_if_statement -> for_statement .

    END             reduce using rule 52 (non_if_statement -> for_statement .)
    SEMICOLON       reduce using rule 52 (non_if_statement -> for_statement .)
    ELSE            reduce using rule 52 (non_if_statement -> for_statement .)


state 40

    (53) non_if_statement -> compound_statement .

    END             reduce using rule 53 (non_if_statement -> compound_statement .)
    SEMICOLON       reduce using rule 53 (non_if_statement -> compound_statement .)
    ELSE            reduce using rule 53 (non_if_statement -> compound_statement .)


state 41

    (54) non_if_statement -> writeln_statement .

    END             reduce using rule 54 (non_if_statement -> writeln_statement .)
    SEMICOLON       reduce using rule 54 (non_if_statement -> writeln_statement .)
    ELSE            reduce using rule 54 (non_if_statement -> writeln_statement .)


state 42

    (55) non_if_statement -> readln_statement .

    END             reduce using rule 55 (non_if_statement -> readln_statement .)
    SEMICOLON       reduce using rule 55 (non_if_statement -> readln_statement .)
    ELSE            reduce using rule 55 (non_if_statement -> readln_statement .)


state 43

    (56) non_if_statement -> function_call_statement .

    END             reduce using rule 56 (non_if_statement -> function_call_statement .)
    SEMICOLON       reduce using rule 56 (non_if_statement -> function_call_statement .)
    ELSE            reduce using rule 56 (non_if_statement -> function_call_statement .)


state 44

    (57) non_if_statement -> BREAK .

    END             reduce using rule 57 (non_if_statement -> BREAK .)
    SEMICOLON       reduce using rule 57 (non_if_statement -> BREAK .)
    ELSE            reduce using rule 57 (non_if_statement -> BREAK .)


state 45

    (58) non_if_statement -> CONTINUE .

    END             reduce using rule 58 (non_if_statement -> CONTINUE .)
    SEMICOLON       reduce using rule 58 (non_if_statement -> CONTINUE .)
    ELSE            reduce using rule 58 (non_if_statement -> CONTINUE .)


state 46

    (59) non_if_statement -> EXIT .

    END             reduce using rule 59 (non_if_statement -> EXIT .)
    SEMICOLON       reduce using rule 59 (non_if_statement -> EXIT .)
    ELSE            reduce using rule 59 (non_if_statement -> EXIT .)


state 47

    (60) non_if_statement -> RETURN . expression
    (85) expression -> . simple_expression
    (86) expression -> . simple_expression relational_operator simple_expression
    (87) simple_expression -> . term
    (88) simple_expression -> . ADD term
    (89) simple_expression -> . SUB term
    (90) simple_expression -> . simple_expression adding_operator term
    (91) term -> . factor
    (92) term -> . term multiplying_operator factor
    (93) term -> . term POW factor
    (94) factor -> . variable
    (95) factor -> . INTEGER_CONST
    (96) factor -> . REAL_CONST
    (97) factor -> . STRING_CONST
    (98) factor -> . LPAREN expression RPAREN
    (99) factor -> . CHAR_CONST
    (100) factor -> . HEX_CONST
    (101) factor -> . TRUE
    (102) factor -> . FALSE
    (103) factor -> . NOT factor
    (78) variable -> . ID
    (79) variable -> . ID LBRACKET expression RBRACKET
    (80) variable -> . AT ID
    (81) variable -> . ID LPAREN argument_list RPAREN
    (82) variable -> . ID LPAREN RPAREN

    ADD             shift and go to state 75
    SUB             shift and go to state 76
    INTEGER_CONST   shift and go to state 79
    REAL_CONST      shift and go to state 80
    STRING_CONST    shift and go to state 81
    LPAREN          shift and go to state 82
    CHAR_CONST      shift and go to state 83
    HEX_CONST       shift and go to state 84
    TRUE            shift and go to state 85
    FALSE           shift and go to state 86
    NOT             shift and go to state 87
    ID              shift and go to state 88
    AT              shift and go to state 56

    expression                     shift and go to state 72
    simple_expression              shift and go to state 73
    term                           shift and go to state 74
    factor                         shift and go to state 77
    variable                       shift and go to state 78

state 48

    (61) non_if_statement -> empty .

    END             reduce using rule 61 (non_if_statement -> empty .)
    SEMICOLON       reduce using rule 61 (non_if_statement -> empty .)
    ELSE            reduce using rule 61 (non_if_statement -> empty .)


state 49

    (62) if_statement -> IF . expression THEN statement
    (63) if_statement -> IF . expression THEN statement ELSE statement
    (85) expression -> . simple_expression
    (86) expression -> . simple_expression relational_operator simple_expression
    (87) simple_expression -> . term
    (88) simple_expression -> . ADD term
    (89) simple_expression -> . SUB term
    (90) simple_expression -> . simple_expression adding_operator term
    (91) term -> . factor
    (92) term -> . term multiplying_operator factor
    (93) term -> . term POW factor
    (94) factor -> . variable
    (95) factor -> . INTEGER_CONST
    (96) factor -> . REAL_CONST
    (97) factor -> . STRING_CONST
    (98) factor -> . LPAREN expression RPAREN
    (99) factor -> . CHAR_CONST
    (100) factor -> . HEX_CONST
    (101) factor -> . TRUE
    (102) factor -> . FALSE
    (103) factor -> . NOT factor
    (78) variable -> . ID
    (79) variable -> . ID LBRACKET expression RBRACKET
    (80) variable -> . AT ID
    (81) variable -> . ID LPAREN argument_list RPAREN
    (82) variable -> . ID LPAREN RPAREN

    ADD             shift and go to state 75
    SUB             shift and go to state 76
    INTEGER_CONST   shift and go to state 79
    REAL_CONST      shift and go to state 80
    STRING_CONST    shift and go to state 81
    LPAREN          shift and go to state 82
    CHAR_CONST      shift and go to state 83
    HEX_CONST       shift and go to state 84
    TRUE            shift and go to state 85
    FALSE           shift and go to state 86
    NOT             shift and go to state 87
    ID              shift and go to state 88
    AT              shift and go to state 56

    expression                     shift and go to state 89
    simple_expression              shift and go to state 73
    term                           shift and go to state 74
    factor                         shift and go to state 77
    variable                       shift and go to state 78

state 50

    (64) assignment_statement -> variable . ASSIGN expression

    ASSIGN          shift and go to state 90


state 51

    (65) while_statement -> WHILE . expression DO statement
    (85) expression -> . simple_expression
    (86) expression -> . simple_expression relational_operator simple_expression
    (87) simple_expression -> . term
    (88) simple_expression -> . ADD term
    (89) simple_expression -> . SUB term
    (90) simple_expression -> . simple_expression adding_operator term
    (91) term -> . factor
    (92) term -> . term multiplying_operator factor
    (93) term -> . term POW factor
    (94) factor -> . variable
    (95) factor -> . INTEGER_CONST
    (96) factor -> . REAL_CONST
    (97) factor -> . STRING_CONST
    (98) factor -> . LPAREN expression RPAREN
    (99) factor -> . CHAR_CONST
    (100) factor -> . HEX_CONST
    (101) factor -> . TRUE
    (102) factor -> . FALSE
    (103) factor -> . NOT factor
    (78) variable -> . ID
    (79) variable -> . ID LBRACKET expression RBRACKET
    (80) variable -> . AT ID
    (81) variable -> . ID LPAREN argument_list RPAREN
    (82) variable -> . ID LPAREN RPAREN

    ADD             shift and go to state 75
    SUB             shift and go to state 76
    INTEGER_CONST   shift and go to state 79
    REAL_CONST      shift and go to state 80
    STRING_CONST    shift and go to state 81
    LPAREN          shift and go to state 82
    CHAR_CONST      shift and go to state 83
    HEX_CONST       shift and go to state 84
    TRUE            shift and go to state 85
    FALSE           shift and go to state 86
    NOT             shift and go to state 87
    ID              shift and go to state 88
    AT              shift and go to state 56

    expression                     shift and go to state 91
    simple_expression              shift and go to state 73
    term                           shift and go to state 74
    factor                         shift and go to state 77
    variable                       shift and go to state 78

state 52

    (66) for_statement -> FOR . ID ASSIGN expression TO expression DO statement
    (67) for_statement -> FOR . ID ASSIGN expression DOWNTO expression DO statement

    ID              shift and go to state 92


state 53

    (72) function_call_statement -> ID . LPAREN argument_list RPAREN
    (73) function_call_statement -> ID . LPAREN RPAREN
    (78) variable -> ID .
    (79) variable -> ID . LBRACKET expression RBRACKET
    (81) variable -> ID . LPAREN argument_list RPAREN
    (82) variable -> ID . LPAREN RPAREN

    LPAREN          shift and go to state 93
    ASSIGN          reduce using rule 78 (variable -> ID .)
    LBRACKET        shift and go to state 94


state 54

    (68) writeln_statement -> WRITELN . LPAREN expression_list RPAREN
    (69) writeln_statement -> WRITELN . LPAREN RPAREN

    LPAREN          shift and go to state 95


state 55

    (70) readln_statement -> READLN . LPAREN variable_list RPAREN
    (71) readln_statement -> READLN . LPAREN RPAREN

    LPAREN          shift and go to state 96


state 56

    (80) variable -> AT . ID

    ID              shift and go to state 97


state 57

    (7) declaration_section -> VAR var_declaration_list SEMICOLON .
    (13) var_declaration_list -> var_declaration_list SEMICOLON . var_declaration
    (28) var_declaration -> . ID_list COLON type
    (31) ID_list -> . ID
    (32) ID_list -> . ID_list COMMA ID

    VAR             reduce using rule 7 (declaration_section -> VAR var_declaration_list SEMICOLON .)
    CONST           reduce using rule 7 (declaration_section -> VAR var_declaration_list SEMICOLON .)
    TYPE            reduce using rule 7 (declaration_section -> VAR var_declaration_list SEMICOLON .)
    FUNCTION        reduce using rule 7 (declaration_section -> VAR var_declaration_list SEMICOLON .)
    PROCEDURE       reduce using rule 7 (declaration_section -> VAR var_declaration_list SEMICOLON .)
    BEGIN           reduce using rule 7 (declaration_section -> VAR var_declaration_list SEMICOLON .)
    ID              shift and go to state 22

    var_declaration                shift and go to state 98
    ID_list                        shift and go to state 21

state 58

    (28) var_declaration -> ID_list COLON . type
    (33) type -> . INTEGER
    (34) type -> . REAL
    (35) type -> . BOOLEAN
    (36) type -> . CHAR
    (37) type -> . STRING
    (38) type -> . SET OF type
    (39) type -> . FILE OF type
    (40) type -> . ARRAY LBRACKET INTEGER_CONST RANGE INTEGER_CONST RBRACKET OF type
    (41) type -> . RECORD field_list END
    (42) type -> . ID

    INTEGER         shift and go to state 100
    REAL            shift and go to state 101
    BOOLEAN         shift and go to state 102
    CHAR            shift and go to state 103
    STRING          shift and go to state 104
    SET             shift and go to state 105
    FILE            shift and go to state 106
    ARRAY           shift and go to state 107
    RECORD          shift and go to state 108
    ID              shift and go to state 109

    type                           shift and go to state 99

state 59

    (32) ID_list -> ID_list COMMA . ID

    ID              shift and go to state 110


state 60

    (8) declaration_section -> CONST const_declaration_list SEMICOLON .
    (15) const_declaration_list -> const_declaration_list SEMICOLON . const_declaration
    (29) const_declaration -> . ID EQUAL expression

    VAR             reduce using rule 8 (declaration_section -> CONST const_declaration_list SEMICOLON .)
    CONST           reduce using rule 8 (declaration_section -> CONST const_declaration_list SEMICOLON .)
    TYPE            reduce using rule 8 (declaration_section -> CONST const_declaration_list SEMICOLON .)
    FUNCTION        reduce using rule 8 (declaration_section -> CONST const_declaration_list SEMICOLON .)
    PROCEDURE       reduce using rule 8 (declaration_section -> CONST const_declaration_list SEMICOLON .)
    BEGIN           reduce using rule 8 (declaration_section -> CONST const_declaration_list SEMICOLON .)
    ID              shift and go to state 25

    const_declaration              shift and go to state 111

state 61
